--- a/aula-3.1/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index-2.html
+++ b/aula-3.1/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index-2.html
@@ -5,7 +5,7 @@
         <title>Aprendendo HTML</title>
     </head>
     <body>
-        <h1>Aprendizados</h1>
+        <h1>Aprendizados <img src="https://assets-global.website-files.com/61549abf6fb9ca5e91bc5709/61549abf6fb9ca4630bc5747_Logo.svg" alt="Logo da Trybe" width="60px"> </h1>
         <h2>Meu aprendizado começa aqui e agora!</h2>
         <p><em>Hoje eu começo minha jornada na Trybe!</em><br><strong> Com muito esforço e apoio</strong> vou me tornar uma pessoa desenvolvedora muito capaz!</p>
         <ul>
@@ -17,6 +17,6 @@
             <li>DOM</li>
             <li>FlexBox</li>
         </ul>
-        <img src="https://assets-global.website-files.com/61549abf6fb9ca5e91bc5709/61549abf6fb9ca4630bc5747_Logo.svg" alt="Logo da Trybe" width="95px">
+        <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank">Currículo</a>
     </body>
 </html>
