--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
+      body {
+        font-size: 16px;
+      }
+      p {
+        font-weight: 600;
+        font-size: 3em;
+      }
       h1 {
+        text-decoration: underline;
+        text-align: center;
         font-size: 65px;
+        font-style: italic;        
+        font-family: sans-serif;
+
         color: orange;
       }
       ul {
@@ -14,6 +26,18 @@
       .bg-color {
         background-color: beige;
       }
+      #red {
+        background-color: red;
+      }
+      #yellow {
+        background-color: yellow;
+      }
+      #brown {
+        background-color: brown;
+      }
+      li {
+        font-weight: bold;
+      }
 
     </style>
   </head>
@@ -21,9 +45,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="bg-color">Qual é a sua cor favorita?</p>
     <ul class="bg-color">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="yellow">Amarelo</li>
+      <li id="red">Vermelho</li>
+      <li id="brown">Marrom</li>
     </ul>
   </body>
 </html>
