--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -3,43 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-      body {
-        font-size: 16px;
-      }
-      p {
-        font-weight: 600;
-        font-size: 3em;
-      }
-      h1 {
-        text-decoration: underline;
-        text-align: center;
-        font-size: 65px;
-        font-style: italic;        
-        font-family: sans-serif;
-
-        color: orange;
-      }
-      ul {
-        background-color: rgb(204, 204, 204);
-      }
-      .bg-color {
-        background-color: beige;
-      }
-      #red {
-        background-color: red;
-      }
-      #yellow {
-        background-color: yellow;
-      }
-      #brown {
-        background-color: brown;
-      }
-      li {
-        font-weight: bold;
-      }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
