--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-css-estruturas-de-pagina/exercicio-01/index.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-css-estruturas-de-pagina/exercicio-01/index.html
@@ -1,5 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exercicio 01</title>
+</head>
+
+<!-- Crie uma lista das pessoas com quem você já fez amizade na Trybe -->
+
+<body>
+  <h1>Lista oficial de pessoas que já fiz amizade na Trybe.</h1>
+  <ul>
+    <li>O cara da camisa de açai com banana.</li>
+    <li>O cara que fez uma imitação e foi condenado.</li>
+    <li>O cara que sabe muito mas eu ainda assim ajudei ele</li>
+  </ul>
+
+  <!-- Adicione uma imagem que venha de uma URL externa -->
+  <h1>Imagem de URL externa</h1>
+  <img src="https://i.ytimg.com/vi/FKFok2bTAkE/maxresdefault.jpg" alt="Luffy prestando homenagem em marineford"
+    style="width: 50%;">
+
+  <!-- Adicione uma imagem que está no seu computador, local -->
+  <h1>Imagem de um arquivo do computador</h1>
+  <img src="source/image/luffy-3d2y.png" alt="Luffy visto de lado com 3D2Y escrito no braço com um X no 3D"
+    style="width: 50%;">
+
+
+</body>
+
+</html>
+
+<!-- antigo exercício -->
+
+<!-- 
+<!DOCTYPE html>
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <title>Aprendendo HTML</title>
@@ -11,3 +48,4 @@
         <img src="https://diariodonordeste.verdesmares.com.br/image/contentid/policy:1.2955269:1592145699/bob-esponja-1367318.jpg?$p=4699ccb" alt="Patrick e Bob Esponja sorrindo e comemorando" width="300px">
     </body>
 </html>
+ -->
