--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-css-estruturas-de-pagina/exercicio-01/index.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-css-estruturas-de-pagina/exercicio-01/index.html
@@ -8,13 +8,14 @@
 </head>
 
 <!-- Crie uma lista das pessoas com quem você já fez amizade na Trybe -->
+<!-- Crie um link entre a sua lista e os parágrafos de pessoas -->
 
 <body>
   <h1>Lista oficial de pessoas que já fiz amizade na Trybe.</h1>
   <ul>
-    <li>O cara da camisa de açai com banana.</li>
-    <li>O cara que fez uma imitação e foi condenado.</li>
-    <li>O cara que sabe muito mas eu ainda assim ajudei ele</li>
+    <li><a href="#pessoa1"> O cara da camisa de açai com banana.</a></li>
+    <li><a href="#pessoa2">O cara que fez uma imitação e foi condenado.</a></li>
+    <li><a href="#pessoa3">O cara que sabe muito mas eu ainda assim ajudei ele</a></li>
   </ul>
 
   <!-- Adicione uma imagem que venha de uma URL externa -->
@@ -27,6 +28,14 @@
   <img src="source/image/luffy-3d2y.png" alt="Luffy visto de lado com 3D2Y escrito no braço com um X no 3D"
     style="width: 50%;">
 
+  <!-- Crie um parágrafo para cada pessoa na lista. Escreva uma mensagem bem bonita -->
+  <h1>Parágrafos sobre as pesssos</h1>
+  <p id="pessoa1">Ele tinha uma camisa amarela e roxa</p>
+  <p id="pessoa2">Proibido falar quem ele imitou</p>
+  <p id="pessoa3">Esse cara e um gênio</p>
+
+  <!-- Crie um link para a página do Google -->
+  <a href="https://www.google.com.br/" target="_blank">Google</a>
 
 </body>
 
