--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-02-html-css-primeiros-passos-em-css/exercicio-01/index.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-02-html-css-primeiros-passos-em-css/exercicio-01/index.html
@@ -1,5 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8">
+  <title>HTML</title>
+  <style>
+    /* Modifique o tamanho do h1 para 65 pixels */
+    /* Modifique a cor do texto do h1 para laranja */
+    h1 {
+      height: 65px;
+      color: #ffa500;
+    }
+
+    /* Modifique a cor de fundo da lista não ordenada */
+    ul {
+      background-color: #c9c7c7;
+    }
+
+    /* Crie uma classe para modificar a cor de fundo da tag p e da ul ao mesmo tempo */
+    .background-red {
+      background-color: #ff0000;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Frutas</h1>
+  <p class="background-red">Qual é a sua fruta favorita?</p>
+  <ul class="background-red">
+    <li>Maçã</li>
+    <li>Banana</li>
+    <li>Goiaba</li>
+  </ul>
+</body>
+
+</html>
+
+<!-- antigo exercício -->
+
+<!-- <!DOCTYPE html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
@@ -14,4 +54,4 @@
       <li id="brown">Marrom</li>
     </ul>
   </body>
-</html>
+</html> -->
